# OS

./: CMakeLists.txt  attachment.docx
Ex1/: Makefile  ex1.tar  makefile  osm.c  osm.h
Ex2/: .Makefile.swp  .nfs00000000707c0cb9000001e8  CMakeLists.txt  Makefile  README  Thread.cpp  Thread.h  demo_itimer  demo_itimer.c  demo_jmp  demo_jmp.c  ex2.tar  ex_2_test_suite.tar  main  sanity.cpp  test1  test132  test14  test1430  test2  test42  test429  test5  thread.cpp  thread.h  uthreads.cpp  uthreads.h
Ex2/ex2sanity/: Instructions  sanity.cpp  test.cpp  test.py
Ex2/tests/: test1  test132  test14  test1430  test2  test42  test429  test5  uthreads.h
Ex3/: CMakeLists.txt  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  READ  README  README!  Search  Search.cpp  ThreadToContainer.cpp  ThreadToContainer.h  ex3.tar  main.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp
Ex3/tests/: README  clean_suite  compile_suite  run_suite
Ex3/tests/Framework/: MapReduceClient.h  MapReduceFramework.h
Ex3/tests/Test_28/: WordFrequencies.cpp  WordFrequenciesClient.hpp  clean  compile  run  test28
Ex3/tests/Test_28/scripts/: Inglourious_Basterds  Inglourious_Basterds_test_results  Pulp_Fiction  Pulp_Fiction_test_results  Reservoir_Dogs  Reservoir_Dogs_test_results
Ex3/tests/Test_496/: Search  clean  compile  run  runValgrind  stress
Ex3/tests/Test_496/heavy_data/: Search_result  true_results
Ex3/tests/Test_496/light_data/: Search_result  true_results
Ex3/tests/Test_6/: GridKeysValues.hpp  GridMapReduce.hpp  GridShamansFinder.cpp  clean  compile  run  test6
Ex3/tests/Test_6/grids/: grid125  grid125_shamans  grid25  grid25_shamans  grid5  grid5_test_results
Ex4/: .~lock.answers.odt#  CMakeLists.txt  CacheAlg.cpp  CacheAlg.h  CacheFS.cpp  CacheFS.h  Fbr.cpp  Fbr.h  Lfu.cpp  Lfu.h  Lru.cpp  Lru.h  Makefile  README  TEST.cpp  Test1.cpp  answers.odt  blc_data.cpp  blc_data.h  ex4.tar  main.cpp  makefile  test
Ex5/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  client  main.cpp  makefile  server  utilities.cpp  utilities.h  whatsappClient  whatsappServer  whatsapp_exception.h
ex4Tests/: RunTests  RunValgrind  Tests.tar  ValgrindLog
